@@ -150,6 +150,7 @@ CONFIG_STM32_USART2=y
 CONFIG_STM32_USB=y
 # CONFIG_STM32_WWDG is not set
 CONFIG_STM32_SPI=y
+CONFIG_STM32_I2C=y
 
 #
 # Alternate Pin Mapping
@@ -170,6 +171,15 @@ CONFIG_STM32_JTAG_FULL_ENABLE=y
 #
 # CONFIG_STM32_SPI_INTERRUPTS is not set
 # CONFIG_STM32_SPI_DMA is not set
+
+#
+# I2C Configuration
+#
+# CONFIG_STM32_I2C_DYNTIMEO is not set
+CONFIG_STM32_I2CTIMEOSEC=0
+CONFIG_STM32_I2CTIMEOMS=500
+CONFIG_STM32_I2CTIMEOTICKS=500
+# CONFIG_STM32_I2C_DUTY16_9 is not set
 
 #
 # SDIO Configuration
@@ -215,7 +225,7 @@ CONFIG_BOOT_RUNFROMFLASH=y
 #
 # Board Selection
 #
-CONFIG_ARCH_BOARD_FIRE_STM32V2=y
+CONFIG_ARCH_BOARD_FIRE_STM32=y
 # CONFIG_ARCH_BOARD_CUSTOM is not set
 CONFIG_ARCH_BOARD="fire-stm32v2"
 
@@ -238,6 +248,8 @@ CONFIG_NSH_MMCSDSPIPORTNO=0
 #
 # M3 Wildfire Configuration
 #
+CONFIG_ARCH_BOARD_FIRE_STM32V2=y
+# CONFIG_ARCH_BOARD_FIRE_STM32V3 is not set
 
 #
 # RTOS Features
@@ -316,6 +328,8 @@ CONFIG_I2C_TRANSFER=y
 # CONFIG_I2C_WRITEREAD is not set
 CONFIG_I2C_POLLED=y
 # CONFIG_I2C_TRACE is not set
+CONFIG_ARCH_HAVE_I2CRESET=y
+# CONFIG_I2C_RESET is not set
 CONFIG_SPI=y
 # CONFIG_SPI_OWNBUS is not set
 CONFIG_SPI_EXCHANGE=y
@@ -348,6 +362,7 @@ CONFIG_ENC28J60_SPIMODE=0
 CONFIG_ENC28J60_FREQUENCY=20000000
 # CONFIG_ENC28J60_STATS is not set
 # CONFIG_ENC28J60_HALFDUPPLEX is not set
+# CONFIG_ENC28J60_DUMPPACKET is not set
 # CONFIG_NET_E1000 is not set
 # CONFIG_NET_SLIP is not set
 # CONFIG_NET_VNET is not set
